# auto_gen_d_ts

./: Cargo.toml  README.md
src/: main.rs
src/args/: mod.rs
src/ask/: client.rs
src/compile/: gen.rs  mod.rs  parse.rs  transform.rs
src/constants/: mod.rs
src/file_io/: read.rs  write.rs
